metadatafullcopy/unpackaged/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>This field will be updated when a record gets approved. Used in apex code. DO NOT DELETE!</description>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Count_Line_Items__c</fullName>
        <label>Count Line Items</label>
        <summaryForeignKey>Expense_Line_Item__c.Expense__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_s_Office__c</fullName>
        <description>This will show the office where the current owner is located.</description>
        <formula>TEXT(Owner:User.Office__c)</formula>
        <inlineHelpText>This will display the office where the current owner is located.</inlineHelpText>
        <label>Owner&apos;s Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Expense_Line_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Expense_Line_Item__c.Expense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Expense Report</label>
    <listViews>
        <fullName>All_Expense_Reports</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Expense Reports</label>
    </listViews>
    <listViews>
        <fullName>Manager_s_View</fullName>
        <columns>NAME</columns>
        <columns>Total_Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Approved_By__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Manager&apos;s View</label>
        <sharedTo>
            <role>Director_of_Business_Development_Central</role>
            <role>Director_of_Business_Development_Eastern</role>
            <role>Director_of_Business_Development_North_West</role>
            <role>Director_of_Business_Development_SoCal</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Expense</fullName>
        <columns>NAME</columns>
        <columns>Total_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Submitted__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Expense</label>
    </listViews>
    <nameField>
        <label>Expenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>